# POOIII

./: .gitignore  LICENSE  README.md
ClienteTCP/: ClienteTCP.sln
ClienteTCP/ClienteTCP/: Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Form2.resx  Program.cs
DecoratorImageProcessor/: ConcreteImageProcessor.cs  GrayscaleDecorator.cs  ImageProcessor.cs  ImageProcessorDecorator.cs  Program.cs
Gema/: Gema.cs  Gema.csproj  Gema.generated.sln  RequestRouter.cs  SimpleClient.ps1  SimpleClient.sh  Worker.cs  appsettings.Development.json  appsettings.json
Gema/Properties/: launchSettings.json
Gema/data/: Capsule.cs
Gema/infrastructure/: CassandraRepository.cs  IRepository.cs  SqlServerRepository.cs
Gema/routing/: Routing.cs
Gema/server/: ConfigurationValidator.cs  IRequestHandler.cs  Request.cs  RequestRouter.cs  Server.cs  ServerBuilder.cs
Gema/server/models/: CapsuleResponse.cs  (+2 more)
GemaOld/: appsettings.json
GenericDecorator/: BaseDecorator.cs  ConcreteComponent.cs  Decorable.cs  FinalDecorator.cs  InicialDecorator.cs  Program.cs
Patrones/: IIterable.cs  Patrones.sln  Program.cs  Tree.cs  TreeNode.cs
REST/client/: Cargo.toml
REST/owner/: Cargo.toml
TcpIP - C#/: TcpIP - C#.sln
TcpIP - C#/TcpIP - C#/: Server.cs  TcpIP - C#.csproj
concurrencia/src/: module-info.java
gRPC/client/: Cargo.toml
gRPC/owner/: Cargo.toml  build.rs
gRPC/owner/src/: main.rs
gRPC/proto/: user.proto
tcpIp/: .project
tcpIp/src/: module-info.java
textapp/: TXT.sln
textapp/TXT.API/: WeatherForecast.cs
textapp/TXT.UI/: Program.cs  _Imports.razor
(+21 files in other folders)
